UPDATE add a version comment to version the package

--- a/plugin.yaml
+++ b/plugin.yaml
@@ -1,5 +1,6 @@
 ##################################################################################
 # Cloudify Azure built in types and plugins definitions.
+# Version: 0.0.1-SNAPSHOT
 ##################################################################################
 
 plugins:
