--- a/plugin.yaml
+++ b/plugin.yaml
@@ -26,10 +26,16 @@ node_types:
             cloud_service:
                 description: The cloud service where the machine should be deployed.
                 type: string
-            storage_account_url:
+            storage_account:
                 description: > 
                     The URL of the storage account where the OS hard disk of 
                     the machine should be stored.
+                type: string
+            storage_container:
+                description: >
+                    The container present in the storage account where blobs
+                    (OS disk) will be created.
+                type: string
         interfaces:
               cloudify.interfaces.lifecycle:
                 start:
