--- a/plugin/tests/blueprint/test_plugin.yaml
+++ b/plugin/tests/blueprint/test_plugin.yaml
@@ -1,20 +1,44 @@
+##################################################################################
+# Cloudify Azure built in types and plugins definitions.
+# Version: 0.0.1-SNAPSHOT
+##################################################################################
+
 plugins:
-    # Name could be anything, this name is what appears on the beginning of operation
-    # mappings.
-    plugin_name:
-        # Could be 'central_deployment_agent' or 'host_agent'.
-        # If 'central_deployment_agent', this plugin will be executed on the
-        # deployment dedicated agent, other wise it will be executed on the host agent.
-        # We set it the 'central_deployment_agent' here because 'host_agent' plugins should
-        # be contained in a host and this is not required for testing purposes
-        executor: central_deployment_agent
+  azure:
+    executor: central_deployment_agent
+    install: false
 
-        # Setting install to false in testing environment. In the non-test plugin definition
-        # this property could be omitted usually (its default is true), in which case
-        # the source property should be set
-        install: false
-
-        # source: URL to archive containing the plugin or name of directory containing
-        #         the plugin if it is included in the the blueprint directory under the
-        #         "plugins" directory. Not required in testing environments as the plugin
-        #         need not be installed on any agent
+node_types:
+    cloudify.azure.nodes.Instance:
+        derived_from: cloudify.nodes.Compute
+        properties:
+            name:
+                description: The name of the machine
+                type: string
+            image_id:
+                description: >
+                    The ID of the image to use on Azure.
+                type: string
+            instance_type:
+                description: >
+                    The instance's size.
+                type: string
+            cloud_service:
+                description: The cloud service where the machine should be deployed.
+                type: string
+            storage_account:
+                description: > 
+                    The URL of the storage account where the OS hard disk of 
+                    the machine should be stored.
+                type: string
+        interfaces:
+              cloudify.interfaces.lifecycle:
+                create:
+                  implementation: azure.instance.create
+                stop:
+                  implementation: azure.instance.stop
+                delete:
+                  implementation: azure.instance.terminate
+        cloudify.interfaces.validation:
+            creation:
+                implementation: azure.instance.creation_validation
