--- a/plugin/tests/blueprint/azure-manager-blueprint.yaml
+++ b/plugin/tests/blueprint/azure-manager-blueprint.yaml
@@ -14,52 +14,35 @@ imports:
 
 inputs:
     subscription_id:
-        default: '3121df85-fac7-48ec-bd49-08c2570686d0'
         type: string
     username:
-        default: 'api@louisdevandierefastconnect.onmicrosoft.com'
         type: string
     password:
-        default: 'Azerty@01'
         type: string
     location:   
         default: 'westeurope'
         type: string
     publisherName:
-        default: 'Canonical'
         type: string
     offer:
-        default: 'UbuntuServer'
         type: string
     sku:
-        default: 12.04.5-LTS
         type: string
     version:
-        default: 'latest'
         type: string
     flavor_id:
-        default: 'Standard_A1'
         type: string
     compute_name:
-        default: 'manager-azure'
         type: string
     network_interface_name:
-        default: 'fcnic'
         type: string
     storage_account:
-        default: 'fcteststorage'
-        type: string
-    create_option:
-        default: 'FromImage'
         type: string
     compute_user:
-        default: 'administrateur'
         type: string
     compute_password:
-        default: 'Azerty@01'
         type: string
     resource_group_name:
-        default: 'FCtest'
         type: string
 
 node_templates:
@@ -78,7 +61,6 @@ node_templates:
             compute_name: {get_input: compute_name}
             network_interface_name: {get_input: network_interface_name}
             storage_account: {get_input: storage_account}
-            create_option: {get_input: create_option}
             compute_user: {get_input: compute_user}
             compute_password: {get_input: compute_password}
             resource_group_name: {get_input: resource_group_name}
@@ -107,7 +89,7 @@ node_templates:
                     task_retry_interval: 30
 
                 policy_engine:
-                    start_timeout: 30
+                    start_timeout: 120
 
         relationships:
           - target: manager_server
@@ -122,4 +104,9 @@ node_templates:
                         task_properties:
                             cloudify_packages: { get_property: [manager, cloudify_packages] }
                             provider_context: { get_attribute: [manager, provider_context] }
+                        fabric_env:
+                            user: { get_input: compute_user }
+                            password: { get_input: compute_password }
+                            connection_attempts: 10
+                            timeout: 60
    
