--- a/blueprints/inputs.yaml.template
+++ b/blueprints/inputs.yaml.template
@@ -5,10 +5,13 @@ publisherName: ''
 offer: ''
 sku: ''
 compute_name: ''
-network_interface_name: ''
 storage_account: ''
 compute_user: ''
 compute_password: ''
 public_key: ''
 private_key: ''
 resource_group_name: ''
+virtual_network_name: ''
+virtual_network_address_prefix: ''
+subnet_name: ''
+subnet_address_prefix: ''
