UPDATE input name; change publisherName by publisher_name (CFAZURE-90)

--- a/blueprints/azure-manager-blueprint.yaml
+++ b/blueprints/azure-manager-blueprint.yaml
@@ -22,7 +22,7 @@ inputs:
   location:   
     default: 'westeurope'
     type: string
-  publisherName:
+  publisher_name:
     type: string
   offer:
     type: string
@@ -114,7 +114,7 @@ node_templates:
       username: { get_input: username }
       password: { get_input: password }
       location: { get_input: location }
-      publisherName: { get_input: publisherName }
+      publisher_name: { get_input: publisher_name }
       offer: { get_input: offer }
       sku: { get_input: sku }
       version: { get_input: version }
