--- a/blueprints/nodecellar/azure-blueprint.yaml
+++ b/blueprints/nodecellar/azure-blueprint.yaml
@@ -30,7 +30,7 @@ inputs:
     location:   
         default: 'westeurope'
         type: string
-    publisherName:
+    publisher_name:
         type: string
     offer:
         type: string
@@ -120,7 +120,7 @@ node_templates:
       username: { get_input: username }
       password: { get_input: password }
       location: { get_input: location }
-      publisherName: { get_input: publisherName }
+      publisher_name: { get_input: publisher_name }
       offer: { get_input: offer }
       sku: { get_input: sku }
       version: { get_input: version }
@@ -141,7 +141,7 @@ node_templates:
       username: { get_input: username }
       password: { get_input: password }
       location: { get_input: location }
-      publisherName: { get_input: publisherName }
+      publisher_name: { get_input: publisher_name }
       offer: { get_input: offer }
       sku: { get_input: sku }
       version: { get_input: version }
