UPDATE input name; change publisherName by publisher_name (CFAZURE-90)

--- a/plugin.yaml
+++ b/plugin.yaml
@@ -161,7 +161,7 @@ node_types:
         type: string
       location:   
         type: string
-      publisherName:
+      publisher_name:
         type: string
       offer:
         type: string
