--- a/blueprints/inputs.yaml.template
+++ b/blueprints/inputs.yaml.template
@@ -5,7 +5,7 @@ publisher_name: ''
 offer: ''
 sku: ''
 compute_name: ''
-storage_account: ''
+storage_account_name: ''
 compute_user: ''
 compute_password: ''
 public_key: ''
