--- a/plugin.yaml
+++ b/plugin.yaml
@@ -173,7 +173,7 @@ node_types:
         type: string
       compute_name:
         type: string
-      storage_account:
+      storage_account_name:
         type: string
       compute_user:
         type: string
