--- a/blueprints/compute/compute.yaml
+++ b/blueprints/compute/compute.yaml
@@ -36,7 +36,7 @@ inputs:
         type: string
     management_subnet_name:
         type: string
-    storage_account:
+    storage_account_name:
         type: string
     compute_user:
         default: 'administrateur'
@@ -66,7 +66,7 @@ node_templates:
             version: { get_input: version }
             flavor_id: { get_input: flavor_id }
             compute_name: {get_input: compute_name}
-            storage_account: {get_input: storage_account}
+            storage_account_name: {get_input: storage_account_name}
             compute_user: {get_input: compute_user}
             compute_password: {get_input: compute_password}
             resource_group_name: {get_input: resource_group_name}
