--- a/blueprints/compute/inputs.yaml.template
+++ b/blueprints/compute/inputs.yaml.template
@@ -2,7 +2,7 @@ subscription_id: '18d68acb-caef-42cb-9dde-050ed320998c'
 username: 'api@victoroudinfastconnect.onmicrosoft.com'
 password: 'Azerty@01'
 compute_name: ''
-storage_account: ''
+storage_account_name: ''
 public_key: |
 
 resource_group_name: ''
